user添加表单验证
